--- a/index.ipynb
+++ b/index.ipynb
@@ -75,11 +75,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create database connection here"
+    "# create database connection here\n",
+    "import sqlite3 \n",
+    "conn = sqlite3.connect('pets_database.db')\n",
+    "c = conn.cursor()"
    ]
   },
   {
@@ -101,7 +104,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# select all data from cats data here"
+    "# select all data from cats data here\n",
+    "c.ex"
    ]
   },
   {
