--- a/index.ipynb
+++ b/index.ipynb
@@ -105,7 +105,7 @@
    "outputs": [],
    "source": [
     "# select all data from cats data here\n",
-    "c.ex"
+    "c.execute('''SELECT * FROM cats;''').fetch"
    ]
   },
   {
