Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -166,7 +166,7 @@
    "outputs": [],
    "source": [
     "# select all cats order by age here\n",
-    "c.execute('''SELECT ''')"
+    "c.execute('''SELECT * FROM cats ORDER BY age;''').fetchall()"
    ]
   },
   {
