Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -219,7 +219,7 @@
    "outputs": [],
    "source": [
     "# select cats order by age descending here\n",
-    "c"
+    "c.execute('''SELECT * FROM cats ORDER BY age DESC''')"
    ]
   },
   {
