--- a/index.ipynb
+++ b/index.ipynb
@@ -273,9 +273,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4, 'Moe', 10, 'Tabby', None)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "c.execute('''SELECT * FROM cats ORDER BY age DESC LIMIT 1;''').fetchone()\n",
     "# OR\n",
