Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -317,7 +317,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# select the two oldest cats here"
+    "# select the two oldest cats here\n",
+    "c.execute('''SELECT * FROM cats''')"
    ]
   },
   {
