Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -313,12 +313,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x7f4ac89c2500>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# select the two oldest cats here\n",
-    "c.execute('''SELECT * FROM cats''')"
+    "c.execute('''SELECT * FROM cats oRdER BY age DESC LIMIT 2''')"
    ]
   },
   {
