Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -313,23 +313,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sqlite3.Cursor at 0x7f4ac89c2500>"
+       "[(4, 'Moe', 10, 'Tabby', None), (3, \"Lil' Bub\", 5, 'American Shorthair', None)]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# select the two oldest cats here\n",
-    "c.execute('''SELECT * FROM cats oRdER BY age DESC LIMIT 2''')"
+    "c.execute('''SELECT * FROM cats oRdER BY age DESC LIMIT 2''').fetchall()"
    ]
   },
   {
