--- a/index.ipynb
+++ b/index.ipynb
@@ -364,12 +364,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Maru',), ('Hana',), ('Patches',)]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# find all records between ages 1 and three here\n",
-    "c.execute('''SELECT name F''')"
+    "c.execute('''SELECT name FROM cats WHERE age BETWEEN 1 AND 3''').fetchall()"
    ]
   },
   {
