--- a/index.ipynb
+++ b/index.ipynb
@@ -413,7 +413,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# select cats where the name field is null here"
+    "# select cats where the name field is null here\n",
+    "c.execute('''SELECT * from cats wh''')"
    ]
   },
   {
