Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -414,7 +414,7 @@
    "outputs": [],
    "source": [
     "# select cats where the name field is null here\n",
-    "c.execute('''SELECT * from cats wh''')"
+    "c.execute('''SELECT * from cats WHERE name IS null''').fetchall()"
    ]
   },
   {
