--- a/index.ipynb
+++ b/index.ipynb
@@ -409,9 +409,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(6, None, None, 'Tabby', None)]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# select cats where the name field is null here\n",
     "c.execute('''SELECT * from cats WHERE name IS null''').fetchall()"
