--- a/index.ipynb
+++ b/index.ipynb
@@ -467,7 +467,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# retrieve the count of cats whose owner id = 1 here"
+    "# retrieve the count of cats whose owner id = 1 here\n",
+    "c.execute()"
    ]
   },
   {
