--- a/index.ipynb
+++ b/index.ipynb
@@ -468,7 +468,7 @@
    "outputs": [],
    "source": [
     "# retrieve the count of cats whose owner id = 1 here\n",
-    "c.execute('''SELECT COUNT(owner_id)''')"
+    "c.execute('''SELECT COUNT(owner_id) FROM cats WHERE ownder_id = 1''')"
    ]
   },
   {
