--- a/index.ipynb
+++ b/index.ipynb
@@ -463,12 +463,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(2,)]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# retrieve the count of cats whose owner id = 1 here\n",
-    "c.execute('''SELECT COUNT(owner_id) FROM cats WHERE ownder_id = 1''')"
+    "c.execute('''SELECT COUNT(owner_id) FROM cats WHERE owner_id = 1''').fetchall()"
    ]
   },
   {
