Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -531,7 +531,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# execute GROUP BY sql statement here"
+    "# execute GROUP BY sql statement here\n",
+    "c.execute(\"\")"
    ]
   },
   {
