--- a/index.ipynb
+++ b/index.ipynb
@@ -532,7 +532,7 @@
    "outputs": [],
    "source": [
     "# execute GROUP BY sql statement here\n",
-    "c.execute(\"\")"
+    "c.execute('''SELECT breed, COUNT(breed) from''')"
    ]
   },
   {
