--- a/index.ipynb
+++ b/index.ipynb
@@ -572,7 +572,8 @@
    },
    "outputs": [],
    "source": [
-    "# execute multiple column group by statement here"
+    "# execute multiple column group by statement here\n",
+    "c.execute('''S''')"
    ]
   },
   {
