Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -573,7 +573,7 @@
    "outputs": [],
    "source": [
     "# execute multiple column group by statement here\n",
-    "c.execute('''S''')"
+    "c.execute('''SELECT breed, owner_id, COUNT(breed) F''')"
    ]
   },
   {
