--- a/index.ipynb
+++ b/index.ipynb
@@ -566,11 +566,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('American Shorthair', None, 1),\n",
+       " ('Calico', None, 1),\n",
+       " ('Scottish Fold', 1, 1),\n",
+       " ('Tabby', None, 2),\n",
+       " ('Tabby', 1, 1)]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# execute multiple column group by statement here\n",
     "c.execute('''SELECT breed, owner_id, COUNT(breed) FROM cats GROUP BY breed, owner_id''').fetchall()"
